// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePasswordField component displays validation styling to the input when the value is not valid 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-kfLCww {
    fill: var(--colors-tonal500);
  }

  [data-align="end"] .c-kfLCww {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-kfLCww {
    margin-left: var(--space-2);
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }

  .c-PJLV-ldsiYK-theme-neutral {
    color: var(--colors-tonal400);
  }

  .c-hMRxhp-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-PJLV-iymbh-theme-error {
    color: var(--colors-danger);
  }

  .c-PJLV-byQUqd-theme-success {
    color: var(--colors-success);
  }

  .c-lfQsGQ-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }
}

@media  {
  .c-oUmPa-jCxibG-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):hover,
  .c-oUmPa-jCxibG-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }
}

@media  {
  .c-PJLV-icmpvrW-css {
    position: relative;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-lfQsGQ-icFLuKp-css {
    padding-right: var(--sizes-2);
  }

  .c-oUmPa-ifcWtbu-css {
    bottom: 0;
    position: absolute;
    right: 0;
  }

  .c-dhzjXW-icMcHdd-css {
    margin-top: var(--space-2);
    gap: var(--space-2);
    flex-wrap: wrap;
    flex-direction: row;
  }

  .c-hMRxhp-ijkHsGW-css {
    margin-right: var(--space-2);
  }

  .c-dyvMgW-iiTbKsx-css {
    transform: translateY(var(--space-0));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <div
          class="c-dhzjXW c-dhzjXW-iwHglP-css"
        >
          <label
            class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
            for="password"
          >
            Create a password
          </label>
        </div>
        <div
          class="c-PJLV c-PJLV-icmpvrW-css"
        >
          <input
            autocomplete="current-password"
            class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-lfQsGQ-icFLuKp-css"
            id="password"
            name="password"
            type="password"
          />
          <button
            aria-label="Show password"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-jCxibG-cv c-oUmPa-ifcWtbu-css c-PJLV"
            data-state="closed"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12s-3 6-10 6-10-6-10-6 3-6 10-6 10 6 10 6Z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
              <path
                d="M3 21 20 4"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <button
      class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-cygQAa-cv"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`CreatePasswordField component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-lfQsGQ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-lfQsGQ:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-lfQsGQ[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-lfQsGQ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-lfQsGQ-fwoCmE-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
    line-height: 2;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-kaaUSm-jyNkKc-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-jyNkKc-size-md .c-hMRxhp {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-oUmPa-jCxibG-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):hover,
  .c-oUmPa-jCxibG-cv:not(:disabled):focus {
    color: var(--colors-primary900);
  }

  .c-oUmPa-jCxibG-cv:not(:disabled):active {
    color: var(--colors-primary1000);
  }

  .c-kaaUSm-cygQAa-cv {
    background: var(--colors-primary800);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):hover,
  .c-kaaUSm-cygQAa-cv:not([disabled]):focus {
    background: var(--colors-primary900);
    color: white;
  }

  .c-kaaUSm-cygQAa-cv:not([disabled]):active {
    background: var(--colors-primary1000);
  }
}

@media  {
  .c-PJLV-icmpvrW-css {
    position: relative;
  }

  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-lfQsGQ-icFLuKp-css {
    padding-right: var(--sizes-2);
  }

  .c-oUmPa-ifcWtbu-css {
    bottom: 0;
    position: absolute;
    right: 0;
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <div
          class="c-dhzjXW c-dhzjXW-iwHglP-css"
        >
          <label
            class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
            for="password"
          >
            Create a password
          </label>
        </div>
        <div
          class="c-PJLV c-PJLV-icmpvrW-css"
        >
          <input
            autocomplete="current-password"
            class="c-lfQsGQ c-lfQsGQ-fwoCmE-size-md c-lfQsGQ-icFLuKp-css"
            id="password"
            name="password"
            type="password"
          />
          <button
            aria-label="Show password"
            class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-jCxibG-cv c-oUmPa-ifcWtbu-css c-PJLV"
            data-state="closed"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12s-3 6-10 6-10-6-10-6 3-6 10-6 10 6 10 6Z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
              <path
                d="M3 21 20 4"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <button
      class="c-kaaUSm c-kaaUSm-jyNkKc-size-md c-kaaUSm-cygQAa-cv"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
